<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_definitions"
            android:icon="@drawable/ic_definition"
            android:title="@string/nav_definitions" />
        <item
            android:id="@+id/nav_synonyms"
            android:icon="@drawable/ic_sinonim"
            android:title="@string/nav_synonyms" />
        <item
            android:id="@+id/nav_antonyms"
            android:icon="@drawable/ic_antonims"
            android:title="@string/nav_antonyms" />
        <item
            android:id="@+id/nav_examples"
            android:icon="@drawable/ic_exemples"
            android:title="@string/nav_examples" />
"
        <item
            android:id="@+id/nav_typeOf"
            android:icon="@drawable/ic_tipus"
            android:title="@string/nav_typeOf" />


    </group>

    <item android:title="About us">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about"
                android:title="@string/about_es" />
            <item
                android:id="@+id/nav_more_apps"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_more_apps" />
        </menu>
    </item>

</menu>
